Copyright 1999, 2000, 2001, 2002 - 2009 Spaces project, Inria Lorraine
                     and Arenaire project, Inria Rhone-Alpes, France
                     and Lab. ANO, USTL (Univ. of Lille),  France


This file is part of the MPFI Library.

The MPFI Library is free software; you can redistribute it and/or modify
it under the terms of the GNU Lesser General Public License as published by
the Free Software Foundation; either version 2.1 of the License, or (at your
option) any later version.

The MPFI Library is distributed in the hope that it will be useful, but
WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public
License for more details.

You should have received a copy of the GNU Lesser General Public License
along with the MPFI Library; see the file COPYING.LIB.  If not, write to
the Free Software Foundation, Inc.,  51 Franklin St, Fifth Floor, Boston,
MA 02110-1301, USA


Changes between MPFI version 1.0 and 1.1

* GNU autoconf/automake standards
* mpfi-impl.h (non exported internal macros)


Changes between MPFI version 1.1 and 1.3.4-RC3

* unknown history


Changes between MPFI 1.3.4-RC3 and 1.4

* bugfixes for trigonometric functions
* add compilation for a shared library

Changes between MPFI version 1.4 and ?

* new functions : Catalan's constant, cubic root, reciprocal square root,
  secant, cosecant, cotangent and hyperbolic counterparts, atan2, hypot,
  get_version, urandom
* can now be compiled outside the source directory
* each function is in its own file (compile_time *= 8;)
* remove limitation to 1000 characters in mpfi_set_str.
* fix documentation for functions mpfi_blow, mpfi_is_inside
* fix bug in mpfi_ui_sub when reusing a variable (bug reported by
  Sisyphus 2010-01-19).