@@ -48,3 +48,5 @@ Changes between MPFI version 1.4 and ?
 * fix documentation for functions mpfi_blow, mpfi_is_inside
 * fix bug in mpfi_ui_sub when reusing a variable (bug reported by
   Sisyphus 2010-01-19).
+* fix bug in mpfi_blow: the result could be underestimated when the factor was
+  small compared to 1.
